--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
+    "vue-baidu-map": "^0.21.19",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
