--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.15.1",
     "iview": "^3.3.3",
+    "plupload": "^2.3.6",
+    "qiniu": "^7.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "uuid": "^3.3.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-baidu-map": "^0.21.19",
